--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,8 +13,7 @@ repos:
     rev: 4.0.1
     hooks:
       - id: flake8
-        args: [ "--ignore=E203,E501", "--max-complexity=12",
-        "type-checking-pydantic-enabled=true"]
+        args: [ "--ignore=E203,E501", "--max-complexity=12" ]
         additional_dependencies: [ flake8-typing-imports==1.7.0 ]
   - repo: https://github.com/myint/autoflake
     rev: v1.4
