--- a/environment.yaml
+++ b/environment.yaml
@@ -12,7 +12,7 @@ dependencies:
      - psutil
      - tensorflow
      - tensorstore
-     - git+https://github.com/fmi-basel/gfriedri-em-alignment@main
+     - git+https://github.com/fmi-basel/gfriedri-em-alignment@v0.2.4
      - prefect==2.9.*
      - git+https://github.com/fmi-faim/custom-prefect-result@v0.1.7
      - git+https://github.com/fmi-faim/faim-prefect@v0.2.2
