Add flow-runner script and build-config script.

--- a/environment.yaml
+++ b/environment.yaml
@@ -9,6 +9,7 @@ dependencies:
   - nvidia::cuda-nvcc=11.7
   - pip
   - pip:
+     - questionary
      - psutil
      - tensorflow
      - tensorstore
